--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   },
   "dependencies": {
     "expo": "^27.0.1",
+    "native-base": "^2.4.5",
     "react": "16.3.1",
-    "react-native": "~0.55.2",
-    "react-native-material-design": "^0.3.7"
+    "react-native": "~0.55.2"
   }
 }
