--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "ajv": "^6.5.3",
     "convert-units": "^2.3.4",
+    "cors": "^2.8.4",
     "formik": "^1.1.1",
     "lodash": "^4.17.10",
+    "parse": "^2.0.2",
+    "parse-react": "^0.5.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
