Implemented reactstrap-confirm for 'Delete Gear' handler.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "reactstrap": "^6.4.0",
+    "reactstrap-confirm": "^1.0.3",
     "uniqid": "^5.0.3"
   },
   "scripts": {
