--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
 		"prop-types": "^15.6.2",
 		"react": "^16.4.2",
 		"react-dom": "^16.4.2",
+		"react-redux": "^5.0.7",
 		"react-router-dom": "^4.3.1",
 		"react-scripts": "1.1.5",
 		"reactstrap": "^6.4.0",
 		"reactstrap-confirm": "^1.0.3",
+		"redux": "^4.0.0",
 		"uniqid": "^5.0.3"
 	},
 	"scripts": {
