--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	},
 	"devDependencies": {
 		"@fortawesome/fontawesome-free": "^5.3.1",
+		"eslint": "^5.5.0",
 		"firebase": "^5.4.2",
 		"firebase-auth": "^0.1.2",
 		"sass": "^1.13.1"
