--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,26 +1,82 @@
 {
-	"plugins": [
-		"react"
-	],
 	"parserOptions": {
-		"ecmaVersion": 6,
+		"max-len": ["error", { "code": 160, "tabWidth": 4 }],
+		"ecmaVersion": 7,
 		"sourceType": "module",
 		"ecmaFeatures": {
 			"jsx": true
 		}
 	},
-	"env": {
-		"es6":     true,
-		"browser": true,
-		"node":    true,
-		"mocha":   true
-	},
-	"extends": [
-		"eslint:recommended",
-		"plugin:react/recommended"
-	],
+
+	"extends": ["eslint:recommended", "plugin:react/recommended"],
 	"rules": {
-		"allowNamedFunctions": true,
-		"allowUnboundThis": true
-	}
+		"constructor-super": 2,
+		"for-direction": 2,
+		"getter-return": 2,
+		"no-class-assign": 2,
+		"no-compare-neg-zero": 2,
+		"no-cond-assign": 2,
+		"no-const-assign": 2,
+		"no-constant-condition": 2,
+		"no-control-regex": 2,
+		"no-debugger": 2,
+		"no-delete-var": 2,
+		"no-dupe-args": 2,
+		"no-dupe-class-members": 2,
+		"no-dupe-keys": 2,
+		"no-duplicate-case": 2,
+		"no-empty-character-class": 2,
+		"no-empty-pattern": 2,
+		"no-empty": 2,
+		"no-ex-assign": 2,
+		"no-extra-boolean-cast": 2,
+		"no-extra-semi": 2,
+		"no-fallthrough": 2,
+		"no-func-assign": 2,
+		"no-global-assign": 2,
+		"no-inner-declarations": 2,
+		"no-invalid-regexp": 2,
+		"no-irregular-whitespace": 2,
+		"no-mixed-spaces-and-tabs": 2,
+		"no-new-symbol": 2,
+		"no-obj-calls": 2,
+		"no-octal": 2,
+		"no-redeclare": 2,
+		"no-regex-spaces": 2,
+		"no-self-assign": 2,
+		"no-this-before-super": 2,
+		"no-undef": 2,
+		"no-unexpected-multiline": 2,
+		"no-unreachable": 2,
+		"no-unsafe-finally": 2,
+		"no-unsafe-negation": 2,
+		"no-useless-escape": 2,
+		"no-unused-vars": 2,
+		"valid-typeof": 2,
+		"no-alert": 2,
+		"no-sparse-arrays": 2,
+		"spaced-comment": 2,
+		"switch-colon-spacing": 2,
+		"semi-spacing": 2,
+		"quotes": 2,
+		"no-else-return": 2,
+		"no-trailing-spaces": 2,
+		"camelcase": 2,
+		"no-ternary": 0,
+		"no-nested-ternary": 2,
+		"no-useless-constructor": 2,
+		"no-useless-concat": 2,
+		"no-useless-return": 2,
+		"no-var": 2,
+		"default-case": 2,
+		"prefer-arrow-callback": 2,
+		"indent": ["error", "tab"]
+	},
+	"env": {
+		"es6": true,
+		"node": true,
+		"jest": true,
+		"browser": true
+	},
+	"parser": "babel-eslint"
 }
