Added autocomplete tag field to gearForm

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
 		"no-compare-neg-zero": 2,
 		"no-cond-assign": 2,
 		"no-const-assign": 2,
+		"no-console": ["error", { "allow": ["warn", "error", "info"] }],
 		"no-constant-condition": 2,
 		"no-control-regex": 2,
 		"no-debugger": 2,
