--- a/package.json
+++ b/package.json
@@ -1,37 +1,44 @@
 {
-	"name": "my-app",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"ajv": "^6.5.3",
-		"bootstrap": "^4.1.3",
-		"convert-units": "^2.3.4",
-		"cors": "^2.8.4",
-		"formik": "^1.1.1",
-		"lodash": "^4.17.10",
-		"prop-types": "^15.6.2",
-		"react": "^16.4.2",
-		"react-bootstrap-typeahead": "^3.2.3",
-		"react-dom": "^16.4.2",
-		"react-router-dom": "^4.3.1",
-		"react-scripts": "1.1.5",
-		"reactstrap": "^6.4.0",
-		"reactstrap-confirm": "^1.0.3",
-		"uniqid": "^5.0.3"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "npm sass:build && react-scripts build",
-		"sass:watch": "sass --watch ./src/styles:./public/css",
-		"sass:build": "sass --update ./src/styles:./public/css",
-		"test": "react-scripts test --env=jsdom",
-		"eject": "react-scripts eject"
-	},
-	"devDependencies": {
-		"@fortawesome/fontawesome-free": "^5.3.1",
-		"eslint": "^5.5.0",
-		"firebase": "^5.4.2",
-		"firebase-auth": "^0.1.2",
-		"sass": "^1.13.1"
-	}
+  "name": "my-app",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "ajv": "^6.5.3",
+    "bootstrap": "^4.1.3",
+    "convert-units": "^2.3.4",
+    "cors": "^2.8.4",
+    "formik": "^1.1.1",
+    "lodash": "^4.17.10",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.2",
+    "react-bootstrap-typeahead": "^3.2.3",
+    "react-dom": "^16.4.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.5",
+    "reactstrap": "^6.4.0",
+    "reactstrap-confirm": "^1.0.3",
+    "uniqid": "^5.0.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "npm sass:build && react-scripts build",
+    "sass:watch": "sass --watch ./src/styles:./public/css",
+    "sass:build": "sass --update ./src/styles:./public/css",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.3.1",
+    "eslint": "^5.5.0",
+    "firebase": "^5.4.2",
+    "firebase-auth": "^0.1.2",
+    "sass": "^1.13.1"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
