--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "dependencies": {
     "ajv": "^6.5.3",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.5.0",
     "convert-units": "^2.3.4",
     "cors": "^2.8.4",
     "formik": "^1.1.1",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.15",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-bootstrap-typeahead": "^3.2.3",
@@ -16,6 +16,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "reactide-config": "^1.0.2",
     "reactstrap": "^6.4.0",
     "reactstrap-confirm": "^1.0.3",
     "uniqid": "^5.0.3"
@@ -26,14 +27,32 @@
     "sass:watch": "sass --watch ./src/styles:./public/css",
     "sass:build": "sass --update ./src/styles:./public/css",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "reactide-server": "webpack-dev-server --config reactide.config.js --mode development --hot"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0-beta.40",
+    "@babel/core": "^7.0.0-beta.40",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0-beta.0",
     "@fortawesome/fontawesome-free": "^5.3.1",
+    "babel-loader": "^8.0.0-beta.0",
+    "css-loader": "^2.1.1",
     "eslint": "^5.5.0",
+    "file-loader": "^4.0.0",
     "firebase": "^5.4.2",
     "firebase-auth": "^0.1.2",
-    "sass": "^1.13.1"
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.12.0",
+    "sass": "^1.26.5",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "url-loader": "^2.0.0",
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.7.0"
   },
   "browserslist": [
     ">0.2%",
